Update JavaRegexAlternation.java