@@ -1,6 +1,5 @@
 package com.zetcode;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -11,7 +10,7 @@ public class JavaRegexAlternation {
 
     public static void main(String[] args) {
 
-        List<String> users = Arrays.asList("Jane", "Thomas", "Robert",
+        List<String> users = List.of("Jane", "Thomas", "Robert",
                 "Lucy", "Beky", "John", "Peter", "Andy");
 
         Pattern p = Pattern.compile("Jane|Beky|Robert");
